# senac-algoritimos

./: Cargo.toml
model/: file.alg  file.rs
src/: 001.alg  002.alg  002.rs  003.alg  004.alg  005.alg  006.alg  007.alg  008.alg  009.alg  009.rs  010.alg  010.rs  011.alg  011.rs  012.alg  012.rs  013.rs  014.alg  014.rs  015.alg  015.rs  016.alg  016.rs  017.rs  018.alg  018.rs  019.alg  019.rs  020.alg  020.rs  021.alg  021.rs  022.alg  022.rs  023.alg  023.rs  024.alg  024.rs  025.alg  (+151 more)
