[[bin]]
name = "001"
path = "src/001.rs"

[[bin]]
name = "002"
path = "src/002.rs"

[[bin]]
name = "003"
path = "src/003.rs"

[[bin]]
name = "004"
path = "src/004.rs"

[[bin]]
name = "005"
path = "src/005.rs"

[[bin]]
name = "006"
path = "src/006.rs"

[[bin]]
name = "007"
path = "src/007.rs"

[[bin]]
name = "008"
path = "src/008.rs"

[[bin]]
name = "009"
path = "src/009.rs"

[[bin]]
name = "010"
path = "src/010.rs"

[[bin]]
name = "011"
path = "src/011.rs"

[[bin]]
name = "012"
path = "src/012.rs"

[[bin]]
name = "013"
path = "src/013.rs"

[[bin]]
name = "014"
path = "src/014.rs"

[[bin]]
name = "015"
path = "src/015.rs"

[[bin]]
name = "016"
path = "src/016.rs"

[[bin]]
name = "017"
path = "src/017.rs"

[[bin]]
name = "018"
path = "src/018.rs"

[[bin]]
name = "019"
path = "src/019.rs"

[[bin]]
name = "tabuada"
path = "src/tabuada.rs"

[[bin]]
name = "generate_new_files"
path = "src/generate_new_files.rs"

[[bin]]
name = "egui_test"
path = "src/egui_test.rs"

[[bin]]
name = "020"
path = "./src/020.rs"

[[bin]]
name = "021"
path = "./src/021.rs"

[[bin]]
name = "022"
path = "./src/022.rs"

[[bin]]
name = "023"
path = "./src/023.rs"

[[bin]]
name = "024"
path = "./src/024.rs"

[[bin]]
name = "025"
path = "./src/025.rs"

[[bin]]
name = "026"
path = "./src/026.rs"

[[bin]]
name = "027"
path = "./src/027.rs"

[[bin]]
name = "028"
path = "./src/028.rs"

[[bin]]
name = "029"
path = "./src/029.rs"

[[bin]]
name = "030"
path = "./src/030.rs"

[[bin]]
name = "031"
path = "./src/031.rs"

[[bin]]
name = "032"
path = "./src/032.rs"

[[bin]]
name = "033"
path = "./src/033.rs"

[[bin]]
name = "034"
path = "./src/034.rs"

[[bin]]
name = "035"
path = "./src/035.rs"

[[bin]]
name = "036"
path = "./src/036.rs"

[dependencies]
chrono = "0.4.38"
eframe = "0.27.2"
rustemon = "3.4.1"
serde = "1.0.203"
serde_derive = "1.0.203"
serde_json = "1.0.117"
toml = "0.8.14"

[dependencies.clap]
features = ["derive"]
version = "4.5.6"

[dependencies.egui_extras]
features = ["all_loaders"]
version = "*"

[dependencies.image]
features = ["jpeg", "png"]
version = "0.24"

[dependencies.reqwest]
features = ["blocking"]
version = "0.12.5"

[dependencies.tokio]
features = ["full"]
version = "1.38.0"

[package]
edition = "2021"
name = "utils"
version = "0.1.0"
