[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "001"
path = "src/001.rs"
[[bin]]
name = "002"
path = "src/002.rs"
[[bin]]
name = "003"
path = "src/003.rs"
[[bin]]
name = "004"
path = "src/004.rs"
[[bin]]
name = "005"
path = "src/005.rs"
[[bin]]
name = "006"
path = "src/006.rs"
[[bin]]
name = "007"
path = "src/007.rs"
[[bin]]
name = "008"
path = "src/008.rs"
[[bin]]
name = "009"
path = "src/009.rs"
[[bin]]
name = "010"
path = "src/010.rs"
[[bin]]
name = "011"
path = "src/011.rs"
[[bin]]
name = "012"
path = "src/012.rs"
[[bin]]
name = "013"
path = "src/013.rs"
[[bin]]
name = "014"
path = "src/014.rs"
[[bin]]
name = "015"
path = "src/015.rs"
[[bin]]
name = "016"
path = "src/016.rs"
[[bin]]
name = "017"
path = "src/017.rs"
[[bin]]
name = "018"
path = "src/018.rs"
[[bin]]
name = "tabuada"
path = "src/tabuada.rs"

[dependencies]
